增加难度系数